# pob

./: .Rbuildignore  .gitignore  DESCRIPTION  NEWS.md  README.Rmd  README.html  README.md
R/: SP500_2015to2020.R  cryptos_2017to2021.R
R_buildignore/: developer_commands.R  save_data_for_python.R
code_examples/R/: ch6-R.html  ch7-R.html  chapter-6.Rmd  chapter-6.html  chapter-7.Rmd
code_examples/chapter-6/: .gitignore  Rsession-old.html  Rsession.Rmd  Rsession.html
code_examples/chapter-6/Rsession_cache/html/: __packages  unnamed-chunk-10_1a665fd9a4656f01e174efd81e34f5b1.RData  unnamed-chunk-10_1a665fd9a4656f01e174efd81e34f5b1.rdb  unnamed-chunk-10_1a665fd9a4656f01e174efd81e34f5b1.rdx  unnamed-chunk-11_9a188da5d9b8ea2c9ea8db8c998fbc37.RData  unnamed-chunk-11_9a188da5d9b8ea2c9ea8db8c998fbc37.rdb  (+28 more)
code_examples/python/: chapter-6.ipynb
data/: SP500_2015to2020.RData  SP500_2015to2020_index.csv  cryptos_2017to2021.RData
data_raw/: SP500.R  crypto.R  cryptos.R
exercises/: appA-exercises-quarto.qmd  appA-exercises.Rmd  appA-exercises.qmd  appB-exercises.Rmd  appB-exercises.qmd  ch09-exercises.qmd  ch11-exercises.Rmd  ch11-exercises.qmd
man/: SP500_2015to2020.Rd  cryptos_2017to2021.Rd
python/: MANIFEST.in  pyproject.toml  setup.py
python/pob_python/: __init__.py  data_loader.py  example.py
python/pob_python/data/: SP500_index_2015to2020.rds  SP500_stocks_2015to2020.rds  cryptos_2017to2021_daily.rds  cryptos_2017to2021_hourly.rds
python/src/pob/: __init__.py  load_data.py
python/src/pob/datasets/: cryptos_2017to2021_daily.csv
