[build-system]
requires = ["setuptools>=42", "wheel", "pyreadr>=0.4"]
build-backend = "setuptools.build_meta"

[project]
name = "pob-python"
version = "0.1.0"
authors = [
  { name="Daniel P. Palomar", email="daniel.p.palomar@gmail.com" },
]
description = "Python interface for Portfolio Optimization Book datasets"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Financial and Insurance Industry",
]

dependencies = [
    "pandas>=1.3",
    "numpy>=1.21",
    "pyreadr>=0.4"
]

[tool.setuptools.package-data]
pob_python = ["data/*.rds", "data/__init__.py"]

[tool.setuptools.packages.find]
where = ["."]
include = ["pob_python*"]
exclude = ["tests*"]